--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-EMAIL_REMETENTE=seuemail@gmail.com
-SENHA=senha_de_aplicativo
+EMAIL_REMETENTE=conquistecnoinfo@gmail.com
+SENHA=jwpm fdov wpfi kpbm
 EMAIL_DESTINATARIO=diegogustavo.fr@gmail.com
